--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta charset="UTF-8" />
 	<meta name="description" content="Happy Birthday Xola">
 	<meta name="robots" content="index, follow" />
-	<link rel="author" href="https://plus.google.com/u/1/+AyushSharma1/" /> 
+	<!-- <link rel="author" href="https://plus.google.com/u/1/+AyushSharma1/" />  -->
     <meta name="keywords" content="Birthday, Happy">
     <!-- Strat of Facebook Meta -->
     <meta property="og:type" content="E-Greeting" />
@@ -23,7 +23,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="stylesheet.css">
 	<link rel="stylesheet" type="text/css" href="loading.css">
-	<link href='http://fonts.googleapis.com/css?family=Signika' rel='stylesheet' type='text/css'>
+	<!-- <link href='http://fonts.googleapis.com/css?family=Signika' rel='stylesheet' type='text/css'> -->
 	<!-- <link href='http://fonts.googleapis.com/css?family=Nunito' rel='stylesheet' type='text/css'> -->
 	<link rel="stylesheet/less" href="cake.less">
 	<script src="//cdnjs.cloudflare.com/ajax/libs/less.js/2.1.0/less.min.js"></script>
@@ -104,26 +104,26 @@
 		</div>
 		<div class="row message">
 			<div class="col-md-12">
-				<p>Today is...</p>
-				<p>as beautiful as other days</p>
-				<p>but you realize</p>
-				<p>another year has gone</p>
-				<p>in a blink of the eyes</p>
-				<p><strong>however</strong></p>
-				<p>Do you know..?</p>
-				<p>today is just special</p>
-				<p>so special to you</p>
-				<p>that's why</p>
-				<p>Let's make it...</p>
-				<p>the best celebration ever</p>
-				<p>and let me share...</p>
-				<p>a piece of happiness to you</p>
-				<p>I made all this...</p>
-				<p>as a birthday present to you</p>
-				<p>thanks for being there</p>
-				<p>thanks for the friendship we made</p>
-				<p>thanks for everything</p>
-				<p>I wish you all the best</p>
+				<p>今天是...</p>
+				<p>和往日一样美丽的一天</p>
+				<p>但你意识到</p>
+				<p>又一年过去了</p>
+				<p>一眨眼</p>
+				<p><strong>然而</strong></p>
+				<p>你知道吗..?</p>
+				<p>今天是特别的</p>
+				<p>尤其是对你来说</p>
+				<p>这就是为什么</p>
+				<p>让我们来吧...</p>
+				<p>有史以来最好的庆祝活动</p>
+				<p>让我分享...</p>
+				<p>这份幸福给你</p>
+				<p>我做了这一切...</p>
+				<p>作为给你的生日礼物</p>
+				<p>谢谢你在那里</p>
+				<p>谢谢我们建立的这份爱情</p>
+				<p>谢谢所有东西</p>
+				<p>希望你一切安好</p>
 				<p>May your life be at ease</p>
 				<p>May all your wishes come true</p>
 				<p>Remember</p>
@@ -156,14 +156,14 @@
 		<div class="navbar navbar-fixed-bottom">
 			<div class="row">
 				<div class="col-md-6 text-center col-md-offset-3">
-					<button class="btn btn-primary" id="turn_on">Turn On Lights</button>
-					<button class="btn btn-primary" id="play">Play Music</button>
-					<button class="btn btn-primary" id="bannar_coming">Let's Decorate</button>
-					<button class="btn btn-primary" id="balloons_flying">Fly With Balloons</button>
-					<button class="btn btn-primary" id="cake_fadein">Most Delicious Cake Ever</button>
-					<button class="btn btn-primary" id="light_candle"> Light Candle</button>
-					<button class="btn btn-primary" id="wish_message">Happy Birthday</button>
-					<button class="btn btn-primary" id="story">A mesage for you</button>
+					<button class="btn btn-primary" id="turn_on">开灯</button>
+					<button class="btn btn-primary" id="play">播放音乐</button>
+					<button class="btn btn-primary" id="bannar_coming">让我们装饰一下</button>
+					<button class="btn btn-primary" id="balloons_flying">乘气球飞翔</button>
+					<button class="btn btn-primary" id="cake_fadein">有史以来最美味的蛋糕</button>
+					<button class="btn btn-primary" id="light_candle"> 点燃蜡烛</button>
+					<button class="btn btn-primary" id="wish_message">生日快乐</button>
+					<button class="btn btn-primary" id="story">有一些话想对你说</button>
 					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
 				</div>
 			</div>
@@ -182,7 +182,8 @@
 
 	</div>
 </body>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script> -->
+<script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 <script src="effect.js"></script>
 <script>
