--- a/index.html
+++ b/index.html
@@ -106,51 +106,40 @@
 			<div class="col-md-12">
 				<p>今天是...</p>
 				<p>和往日一样美丽的一天</p>
-				<p>但你意识到</p>
-				<p>又一年过去了</p>
+				<p>但你有没有意识到</p>
+				<p>时间过得很快</p>
 				<p>一眨眼</p>
-				<p><strong>然而</strong></p>
+				<p><strong>就来到了你的20岁生日</strong></p>
 				<p>你知道吗..?</p>
 				<p>今天是特别的</p>
 				<p>尤其是对你来说</p>
-				<p>这就是为什么</p>
 				<p>让我们来吧...</p>
 				<p>有史以来最好的庆祝活动</p>
 				<p>让我分享...</p>
 				<p>这份幸福给你</p>
 				<p>我做了这一切...</p>
 				<p>作为给你的生日礼物</p>
-				<p>谢谢你在那里</p>
+				<p>谢谢我们的相遇</p>
 				<p>谢谢我们建立的这份爱情</p>
 				<p>谢谢所有东西</p>
 				<p>希望你一切安好</p>
-				<p>May your life be at ease</p>
-				<p>May all your wishes come true</p>
-				<p>Remember</p>
-				<p>your ambitions</p>
-				<p>you live as a free bird...</p>
-				<p>flying in the blue sky</p>
-				<p>Now things are different...</p>
-				<p>real story of your life</p>
-				<p>is just about to begin</p>
-				<p>indeed..</p>
-				<p>but...</p>
-				<p>don't worry</p>
-				<p>because...</p>
-				<p>God has your back</p>
-				<p>and</p>
-				<p>this year will be better</p>
-				<p>and I hope</p>
-				<p>you'll find...</p>
-				<p>happiness along the way</p>
-				<p>keep your spirit up</p>
-				<p>enjoy every single moment...</p>
-				<p>that you experience today</p>
-				<p>fill it with your most beautiful smile</p>
-				<p>and make it the best memory..</p>
-				<p>lastly...</p>
-				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday Xola Mathembisa</p>
+				<p>愿你生活无忧</p>
+				<p>愿你心想事成</p>
+				<p>愿你越来越美</p>
+				<p>愿你越来越开心</p>
+				<p>记住</p>
+				<p>你的梦想</p>
+				<p>你活得像只自由的小鸟...</p>
+				<p>在蓝色的天空下飞行</p>
+				<p>现在变得不一样了...</p>
+				<p>你生活的真实故事</p>
+				<p>只是刚刚开始</p>
+				<p>让我们一起期待..</p>
+				<p>期待我们的每一次相见</p>
+				<p>它将会铭记在我们的内心里</p>
+				<p>最后...</p>
+				<p>我想再祝福你一次</p>
+				<p>生日快乐！小屁孩～</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
